Add Cloudflare Tunnel setup, 2-stage deploy (gamma→prod), domain docs, and fix backend compilation
- Add Cloudflare Tunnel support (quick tunnel + named tunnels for gamma/prod)
- Add docker-compose.cloudflare.yml for production tunnels
- Add scripts/fetch-cloudflared.sh and bin/cloudflared binary
- Update start-tunnel.sh to use local cloudflared binary
- Add 2-stage GitHub deploy workflow (gamma → prod) with environment secrets
- Add docs: CLOUDFLARE_SETUP.md, DOMAIN_AND_DEPLOY.md, PUBLIC_URLS.md
- Update all docs to use inkly.co.in domain
- Add nginx configs for www.inkly.co.in and gamma.inkly.co.in
- Fix backend tsconfig.json to exclude test files from compilation
- Update .env.prod.example with Cloudflare tunnel token
- Add start-cloudflare.sh for production tunnel deployment

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,30 +1,30 @@
-# Production Environment Variables
-# Copy this to .env.prod and fill in your values
-# DO NOT commit .env.prod to git!
+# Production environment
+# Copy to .env.prod and set values. Do not commit .env.prod.
+# For public URLs see docs/PUBLIC_URLS.md (www.inkly.co.in, gamma.inkly.co.in).
 
-# Database
+# Required
 POSTGRES_USER=inkly_user
-POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_PASSWORD=change_me_secure_password
 POSTGRES_DB=inkly_prod
-DATABASE_URL=postgresql://inkly_user:your_secure_password_here@postgres:5432/inkly_prod?schema=public
+DATABASE_URL=postgresql://inkly_user:change_me_secure_password@postgres:5432/inkly_prod?schema=public
+JWT_SECRET=change_me_use_openssl_rand_hex_32
 
-# JWT
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+# Public URLs — set per environment (gamma vs prod)
+# Gamma:  FRONTEND_URL=https://gamma.inkly.co.in   NEXT_PUBLIC_API_URL=https://gamma.inkly.co.in/api
+# Prod:   FRONTEND_URL=https://www.inkly.co.in     NEXT_PUBLIC_API_URL=https://www.inkly.co.in/api
+FRONTEND_URL=https://www.inkly.co.in
+NEXT_PUBLIC_API_URL=https://www.inkly.co.in/api
+
+# Optional (defaults used if unset)
 JWT_EXPIRES_IN=7d
 
-# Frontend URL (for CORS and API calls)
-FRONTEND_URL=https://yourdomain.com
-NEXT_PUBLIC_API_URL=https://api.yourdomain.com/api
+# Cloudflare Tunnel (gamma / prod). Required for deploy when using Cloudflare.
+# Get token: Zero Trust → Tunnels → Create tunnel → copy token (see docs/CLOUDFLARE_SETUP.md).
+CLOUDFLARE_TUNNEL_TOKEN=
 
-# Email (SMTP)
+# Optional – SMTP. If omitted, emails are skipped (welcome/order emails disabled).
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_USER=
+SMTP_PASS=
 SMTP_FROM=noreply@yourdomain.com
-
-# AWS S3 (Optional - for file storage)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_S3_BUCKET=inkly-media
