--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,6 @@
-# Production Docker Compose Configuration
-# Usage: docker-compose -f docker-compose.prod.yml up -d
+# Production Docker Compose
+# Usage: docker compose --env-file .env.prod -f docker-compose.prod.yml up -d
+# Ensure .env.prod exists (see .env.prod.example).
 
 services:
   postgres:
@@ -38,7 +39,10 @@ services:
     build:
       context: ./inkly-backend
       dockerfile: Dockerfile
+    image: inkly-backend:prod
     container_name: inkly-backend-prod
+    ports:
+      - "3001:3001"
     environment:
       NODE_ENV: production
       PORT: 3001
@@ -47,52 +51,50 @@ services:
       REDIS_PORT: 6379
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-7d}
-      SMTP_HOST: ${SMTP_HOST}
-      SMTP_PORT: ${SMTP_PORT}
-      SMTP_USER: ${SMTP_USER}
-      SMTP_PASS: ${SMTP_PASS}
-      SMTP_FROM: ${SMTP_FROM}
-      FRONTEND_URL: ${FRONTEND_URL}
+      SMTP_HOST: ${SMTP_HOST:-}
+      SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_USER: ${SMTP_USER:-}
+      SMTP_PASS: ${SMTP_PASS:-}
+      SMTP_FROM: ${SMTP_FROM:-noreply@inkly.com}
+      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
     volumes:
-      - ./inkly-backend/uploads:/app/uploads
+      - backend_uploads:/app/uploads
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
     restart: unless-stopped
     networks:
       - inkly-network
-    command: sh -c "npm run prisma:generate && npx prisma migrate deploy && npm run start:prod"
 
   frontend:
     build:
       context: ./inkly-frontend
       dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:3001/api}
+    image: inkly-frontend:prod
     container_name: inkly-frontend-prod
-    environment:
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-    depends_on:
-      - backend
-    restart: unless-stopped
-    networks:
-      - inkly-network
-
-  # Optional: Nginx reverse proxy
-  nginx:
-    image: nginx:alpine
-    container_name: inkly-nginx-prod
     ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - "3000:3000"
+    environment:
+      NODE_ENV: production
     depends_on:
-      - frontend
-      - backend
+      backend:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     restart: unless-stopped
     networks:
       - inkly-network
@@ -100,6 +102,7 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  backend_uploads:
 
 networks:
   inkly-network:
